[gd_scene load_steps=6 format=2]

[ext_resource path="res://explosion.gd" type="Script" id=1]
[ext_resource path="res://Audio/explosion2.mp3" type="AudioStream" id=2]

[sub_resource type="SphereShape" id=1]
radius = 20.5374

[sub_resource type="SphereMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 1, 0.635294, 0.0588235, 1 )

[node name="explosion" type="Area" groups=["Projectile"]]
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 15, 0, 0, 0, 15, 0, 0, 0, 15, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25

[node name="startupTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="EndTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="body_entered" from="." to="." method="_on_explosion_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="startupTimer" to="." method="_on_startupTimer_timeout"]
[connection signal="timeout" from="EndTimer" to="." method="_on_EndTimer_timeout"]
